fix: table-whitespace-corner in DecisionMaking and AssetPerfAll

--- a/src/react/DecisionMaking/src/components/SidePanel/styles.scss
+++ b/src/react/DecisionMaking/src/components/SidePanel/styles.scss
@@ -70,6 +70,11 @@
 
 :global {
 
+  .ant-table-wrapper:after,
+  .ant-table-wrapper:before {
+    content: '' !important;
+  }
+
   .ant-table {
     border-radius: 8px;
 
